--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f8bee4">  <td>21/02/03 02:29:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@36b4cef0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>21/02/03 02:30:02</td>   <td>8463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@36b4cef0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>21/02/03 02:30:00</td>   <td>6389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanClickForgotPasswordLink()[pri:6, instance:com.fbistech.testcases.LoginPageTest@36b4cef0]">verifyUserCanClickForgotPasswordLink</td> 
-  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="7aa9ba">  <td>21/10/11 05:29:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1b26f7b2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1485697819</td>   <td></td> </tr>
+<tr bgcolor="7aa9ba">  <td>21/10/11 05:29:47</td>   <td>12712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1b26f7b2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1485697819</td>   <td></td> </tr>
+<tr bgcolor="7aa9ba">  <td>21/10/11 05:29:39</td>   <td>4565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithValideDetails()[pri:3, instance:com.fbistech.testcases.LoginPageTest@1b26f7b2]">verifyUserLoginWithValideDetails</td> 
+  <td>main@1485697819</td>   <td></td> </tr>
 </table>
