--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889ce7">  <td>21/10/13 06:06:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.fbistech.testcases.HomePageTest@4671e53b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@124407148</td>   <td></td> </tr>
-<tr bgcolor="889ce7">  <td>21/10/13 06:06:14</td>   <td>-6273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserCanClickOnContactUsLinks()[pri:4, instance:com.fbistech.testcases.HomePageTest@4671e53b]">verifyUserCanClickOnContactUsLinks</td> 
-  <td>main@124407148</td>   <td></td> </tr>
-<tr bgcolor="889ce7">  <td>21/10/13 06:06:07</td>   <td>-13693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.fbistech.testcases.HomePageTest@4671e53b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@124407148</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>21/10/15 15:55:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@2a70a3d8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@300031246</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>21/10/15 15:55:14</td>   <td>5176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithValideDetails()[pri:3, instance:com.fbistech.testcases.LoginPageTest@2a70a3d8]">verifyUserLoginWithValideDetails</td> 
+  <td>main@300031246</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>21/10/15 15:55:19</td>   <td>10214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@2a70a3d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@300031246</td>   <td></td> </tr>
 </table>
