--- a/test-output/index.html
+++ b/test-output/index.html
@@ -130,13 +130,13 @@
                   <a name="verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName">
                   </a> <!-- verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName -->
                   <span class="method-name">verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName</span>
-                  <div class="stack-trace">java.lang.AssertionError: Text displayed does not matched expected [The password must be at least 6 characters.] but found [The email must be a valid email address.]
+                  <div class="stack-trace">java.lang.AssertionError: Text displayed does not matched expected [The password must be at least 6 characters.] but found [The selected email is invalid.]
 	at org.testng.Assert.fail(Assert.java:99)
 	at org.testng.Assert.failNotEquals(Assert.java:1037)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
 	at org.testng.Assert.assertEquals(Assert.java:122)
 	at org.testng.Assert.assertEquals(Assert.java:629)
-	at com.fbistech.testcases.LoginPageTest.verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName(LoginPageTest.java:556)
+	at com.fbistech.testcases.LoginPageTest.verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName(LoginPageTest.java:560)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -174,7 +174,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/j4/j04gn4bj1dl177nd39f_c1h80000gn/T/testng-eclipse-611165653/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/j4/j04gn4bj1dl177nd39f_c1h80000gn/T/testng-eclipse--667035974/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,12 +227,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName')
 data.setCell(0, 2, 'com.fbistech.testcases.LoginPageTest')
-data.setCell(0, 3, 15632);
+data.setCell(0, 3, 16144);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,11 +267,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName</span>
-                <span class="method-start">18473 ms</span>
+                <span class="method-start">19139 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">34108 ms</span>
+                <span class="method-start">35286 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
