--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,58 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyUserCannotResetForgetPasswordWithEmailWithoutDomainName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanClickOnLoginLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_InvalideCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_PasswordLessThan6DigitsCharacters</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanNavigateToTermsAndConditionsPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanTerminateForgotPasswordProcess</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanResetForgetPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_ValidEmail_InvalidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_InvalidEmail_ValidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_EmailWithoutDomaName_AndValidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanClickForgotPasswordLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCannotLoginWith_EmailWithoutDomaNameExtension_AndValidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserLoginWith_ValideCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName</td>
 <td>&nbsp;</td></tr>
 <tr>
