--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyUserCannotResetForgetPasswordWithEmptyInputField</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyUserCanClickOnLoginLink</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -24,6 +28,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyUserCannotLoginWith_PasswordLessThan6DigitsCharacters</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanLoginWith_ValideCredentials</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -51,15 +59,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyUserCanClickOnTermsAndConditionsLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyUserCanClickForgotPasswordLink</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserCannotLoginWith_EmailWithoutDomaNameExtension_AndValidPassword</td>
+<td>verifyUserCannotLoginWith_EmptyEmail_AndValidPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserLoginWith_ValideCredentials</td>
+<td>verifyUserCannotLoginWith_ValidEmail_EmptyPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
